# fuzzer

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  echo.py  run_benchmark.py
resources/: big-list-of-naughty-strings.txt
resources/benchmark/: buffer_overflow.c  crash-if-input-length-one.py  crash-if-newline.py  divide_by_zero.cpp  echo.py  integer_overflow.c  no-a.py  null_deref.c  off_by_one.c  regex_dos.py  timeout-test.py
resources/test/: crash-if-input-length-one.py  crash-if-newline.py  crash.py  echo.py  no-a.py  timeout-test.py  url-parser.py  urllib-parser.py
resources/test_output_distribution/: README.md  generate_words.cpp  main.py
src/: delay.rs  flag.rs  fuzzer.rs  lib.rs  main.rs  main_fuzzer.rs  main_runner.rs  mutations.rs  random_strings.rs  random_urls.rs  runner.rs  stoppable_loop.rs
src/flag/: flag.rs  waitable_flag.rs
src/main_fuzzer/: predefined_inputs.rs
tests/: echo_integration_test.rs
url_benchmark/: run.py
url_benchmark/testcases/uriparser_bug1/src/: UriParse.c
url_benchmark/testcases/uriparser_bug2/: main.c
url_benchmark/testcases/uriparser_bug2/src/: UriParse.c
url_benchmark/testcases/uriparser_bug3/src/: UriParse.c
url_benchmark/testcases/uriparser_bug6/: main.c
url_benchmark/testcases/url.h_bug1/: Makefile  gen_char_category_table  main.c  url.c  url.h  url_char_category.h
url_benchmark/testcases/url.h_bug2/: gen_char_category_table  gen_char_category_table.c  test.c  url.c
url_benchmark/testcases/url.h_original/: gen_char_category_table  main.c  url.c
(+4 files in other folders)
