[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.6"
shared_child = "1.0.1"
rand = { version = "0.8.5", features = ["small_rng"] }
once_cell = "1.20.2"

[profile.release]
# This removes the panic handler from release, makes binaries slightly smaller
# (Code still panics, but panics are unrecoverable, we don't care about this)
panic = "abort"
